tests/ui/openapi_type_nullable_non_bool.stderr
error: Expected bool
 --> $DIR/openapi_type_nullable_non_bool.rs:6:23
  |
6 |     #[openapi(nullable = "yes, please")]
  |                          ^^^^^^^^^^^^^
